--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines" : { 
+    "node" : ">=8.0.0 <11.0.0" 
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
