--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines" : { 
-    "node" : ">=8.0.0 <11.0.0" 
+    "node" : "11.0.0" 
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +25,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/naman815/Flipkart-Search-using-flipkart-Api"
-  }
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
